tests/e2e/type_assignment_invalid.error
Error: syntax error in story at line 1, column 5

1|    a = [] to int
          ^^^^^^^^^

E0126: Type casting not supported from `List[any]` to `int`.
